<resources>
    <string name="app_name">Minion Demo</string>
    <string name="benchmark">Benchmark</string>
    <string name="parse">Parsing</string>
    <string name="compile">Compile</string>
    <string name="benchmark_description">Benchmark will check Minion working speed</string>
    <string name="parse_description">Parsing INI formatted data</string>
    <string name="compile_description">Compile values to INI format</string>
    <string name="benchmark_groups_creation">Groups creation</string>
    <string name="benchmark_items_creation">Items creation</string>
    <string name="benchmark_groups_access">Groups access</string>
    <string name="benchmark_items_access">Items access</string>
    <string name="benchmark_compilation">Compilation</string>
    <string name="benchmark_parsing">Parsing</string>
    <string name="parse_action">Parse</string>
    <string name="please_wait">Please, wait…</string>
    <string name="parsing_result">Parsed in %1$d ms\nRead %2$d groups and %3$d records.</string>
    <string name="ok">OK</string>
    <string name="records_count">%d records</string>
    <string name="compile_action">Compile</string>
    <string name="insert_action">Insert group</string>
</resources>
