<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/benchmark_groups_creation"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/benchmark_items_creation"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/benchmark_groups_access"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/benchmark_items_access"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/benchmark_compilation"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/benchmark_parsing"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    </LinearLayout>

</FrameLayout>